hidden horizontal overflow and fixing html body

--- a/src/main/resources/static/css/home_page.css
+++ b/src/main/resources/static/css/home_page.css
@@ -1,3 +1,7 @@
+.div {
+    overflow-x: hidden;
+}
+
 #default-navbar,
 #default-footer {
     background: linear-gradient(120deg, #0cf9e5, #5a84eb);
